--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   Hii, I am a full Stack Web Developer, web designer, software developer enthusiast. I am currently interning with <b>Internshala</b> as an ISP'18. I am also a freelancer with <b>Chegg Inc</b> as an Managed Network Expert, Problem setter with <b>CutShort</b>, Campus Ambassador with <b>Collegedunia</b>.
                   </p>
                   <p class="lead">
-                   I make Actions for Google, Skills for Alexa (Amazon). I also write articles for medium.com, vocal.media. I also run a YouTube channel and makes educational, technology, Unboxing related videos. You can subscribe to my <b><a href="https://www.youtube.com/channel/UCOykz3Ssp3Q1SHPG8Mqj7PA?view_as=subscriber" target="_blank">Channel</a></b>.
+                   I make Actions for Google, Skills for Alexa (Amazon). Also, I writes articles websites like <b><a href= "https://medium.com" target="_blank">Medium</a></b>, vocal.media. I also run a YouTube channel and makes educational, technology, Unboxing related videos. You can subscribe to my <b><a href="https://www.youtube.com/channel/UCOykz3Ssp3Q1SHPG8Mqj7PA?view_as=subscriber" target="_blank">Channel</a></b>.
                   </p>
                   <p class="lead">
                     I am a CS Undergraduate student at Maharaja Surajmal Institute (GGSIPU), Delhi, India. I loves contributing to Open Source.
