--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
+                  <span>C++</span> <span class="pull-right">75%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
@@ -160,7 +165,7 @@
                   </p>
                   
                   <!--<a class="main-button" href="https://drive.google.com/open?id=1XYpYhLeqCdyx_q6l0bQoC7RgwQjAjXPf" target="_blank" style="color: rgb(237, 249, 254); background-color: #48abec; border: 1px solid #48abec;">See My Resume</a> -->
-                  <span style="padding-left:160px"></span><a class="main-button" href="https://drive.google.com/file/d/1M2UdTTbawDaMeyDFY8Yv-bHTunopcEv_/view" target="_blank"><button type="submit" class="button button-a button-big button-rouded">My Resume</button></a>
+                  <span style="padding-left:160px"></span><a class="main-button" href="https://drive.google.com/file/d/1t036orYTAvQ-f1rlkcObNRIeLlbZTJch/view?usp=sharing" target="_blank"><button type="submit" class="button button-a button-big button-rouded">My Resume</button></a>
 
                 </div>
               </div>
