--- a/index.html
+++ b/index.html
@@ -679,9 +679,9 @@
                     <ul>
                       <li><a href="tarunsinghwap7@gmail.com#" target="_blank"><span class="ico-circle"><i class="ion-social-googleplus"></i></span></a></li>
                       <li><a href="https://www.linkedin.com/in/tarunsingh24/" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                      <li><a href="https://twitter.com/itsTarun_24" target="_blank"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href="https://www.instagram.com/tar_grapher_24/" target="_blank"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href="https://github.com/code-tarun" target="_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="https://twitter.com/itsTarun24" target="_blank"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
+                      <li><a href="https://www.instagram.com/targrapher76" target="_blank"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="https://github.com/tarunsinghofficial" target="_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
