--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 
                 <div class="col-lg-4 text-center my-auto pb-5 rounded-circle"><img class="img-fluid rounded-circle"
-                        src="/Assets/Img/blog/1607587539883.jfif"></div>
+                        src="/Img/blog/1607587539883.jfif"></div>
             </div>
         </section>
 
