--- a/index.html
+++ b/index.html
@@ -178,73 +178,73 @@
             <div class="row pt-5">
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/java.png">
+                        <img class="tech-icon" src="./Img/logo/java.png">
                         <h3>Java</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/cpp.png">
+                        <img class="tech-icon" src="./Img/logo/cpp.png">
                         <h3>C</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/clag.png">
+                        <img class="tech-icon" src="./Img/logo/clag.png">
                         <h3>C++</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/js.png">
+                        <img class="tech-icon" src="./Img/logo/js.png">
                         <h3>JavaScript</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/mysql.png">
+                        <img class="tech-icon" src="./Img/logo/mysql.png">
                         <h3>SQL</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/node.png">
+                        <img class="tech-icon" src="./Img/logo/node.png">
                         <h3>Node</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/html.png">
+                        <img class="tech-icon" src="./Img/logo/html.png">
                         <h3>HTML</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/css.png">
+                        <img class="tech-icon" src="./Img/logo/css.png">
                         <h3>CSS</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/cloud.png">
+                        <img class="tech-icon" src="./Img/logo/cloud.png">
                         <h3>GCloud</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/flutter.png">
+                        <img class="tech-icon" src="./Img/logo/flutter.png">
                         <h3>Flutter</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/dart.png">
+                        <img class="tech-icon" src="./Img/logo/dart.png">
                         <h3>Dart</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img class="tech-icon" src="../Assets/Img/logo/git.png">
+                        <img class="tech-icon" src="./Img/logo/git.png">
                         <h3>Git</h3>
                     </div>
                 </div>
@@ -446,7 +446,7 @@
                     <div class="col-md-4">
                         <div class="blog-entry">
                             <a href="https://targrapher76.medium.com/make-your-first-app-with-flutter-7a6d009b2fa3">
-                                <img class="img-fluid" src="../Assets/Img/blog/bg1.png">
+                                <img class="img-fluid" src="./Img/blog/bg1.png">
                             </a>
                             <div class="text p-4 d-block">
                                 <div class="meta mb-3">
@@ -460,7 +460,7 @@
                     <div class="col-md-4">
                         <div class="blog-entry">
                             <a href="https://www.geeksforgeeks.org/traps-and-system-calls-in-operating-system-os/">
-                                <img class="img-fluid" src="../Assets/Img/blog/bg2.png">
+                                <img class="img-fluid" src="./Img/blog/bg2.png">
                             </a>
                             <div class="text p-4 d-block">
                                 <div class="meta mb-3">
@@ -474,7 +474,7 @@
                     <div class="col-md-4">
                         <div class="blog-entry">
                             <a href="https://vocal.media/education/how-to-become-a-microsoft-learn-student-ambassador-or-msp">
-                                <img class="img-fluid" src="../Assets/Img/blog/bg3.png">
+                                <img class="img-fluid" src="./Img/blog/bg3.png">
                             </a>
                             <div class="text p-4 d-block">
                                 <div class="meta mb-3">
@@ -488,7 +488,7 @@
                     <div class="col-md-4">
                         <div class="blog-entry">
                             <a href="https://www.geeksforgeeks.org/flutter-magic-8-ball-app/">
-                                <img class="img-fluid" src="../Assets/Img/blog/bg4.png">
+                                <img class="img-fluid" src="./Img/blog/bg4.png">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
@@ -502,7 +502,7 @@
                     <div class="col-md-4">
                         <div class="blog-entry">
                             <a href="https://targrapher76.medium.com/how-to-become-an-internshala-student-partner-isp-28dfdb9b8695">
-                                <img class="img-fluid" src="../Assets/Img/blog/bg5.png">
+                                <img class="img-fluid" src="./Img/blog/bg5.png">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
