--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
           <a style="font-family: 'Mr De Haviland', cursive; font-weight: 500; font-size: 47px;">< Tarun Singh /></a>
           <form class="d-flex">
-            <a href="https://drive.google.com/file/d/1t036orYTAvQ-f1rlkcObNRIeLlbZTJch/view" style="text-decoration: none; color: black;" target="_blank">Resume</a>
+            <a href="https://drive.google.com/file/d/1SXtNOrIn2LBdKqkqquJs4iG02T7_xt_A/view?usp=sharing" style="text-decoration: none; color: black;" target="_blank">Resume</a>
           </form>
         </div>
       </nav>
